fix details margin only on mobile

--- a/src/components/Details/Details.scss
+++ b/src/components/Details/Details.scss
@@ -4,53 +4,56 @@
 	height: 100vh;
 	display: grid;
 	place-items: center;
-	margin-top: 6rem;
 	.title {
 		text-align: center;
 	}
-	.product {
-		@include sm {
-			& {
-				flex-direction: column !important;
-				gap: 4rem;
-				.image,
-				.info {
-					width: 100% !important;
-				}
-				.image {
-					img {
-						display: block;
-						margin: 0 auto;
+	@include sm {
+		& {
+			margin-top: 6rem;
+			.product {
+				& {
+					flex-direction: column !important;
+					gap: 4rem;
+					.image,
+					.info {
+						width: 100% !important;
 					}
-				}
-				.info {
-					& > div {
-						justify-content: center;
-						align-items: center;
+					.image {
+						img {
+							display: block;
+							margin: 0 auto;
+						}
+					}
+					.info {
+						& > div {
+							justify-content: center;
+							align-items: center;
+						}
 					}
 				}
 			}
 		}
-		.image {
-			width: 50%;
-		}
-		.info {
-			width: 50%;
-			& > div {
-				display: flex;
-				color: $clr-grey-2;
-				width: 100%;
-				span,
-				h4,
-				p {
-					color: $clr-primary-4;
-					margin-left: 1rem !important;
-				}
+	}
+
+	.image {
+		width: 50%;
+	}
+	.info {
+		width: 50%;
+		& > div {
+			display: flex;
+			color: $clr-grey-2;
+			width: 100%;
+			span,
+			h4,
+			p {
+				color: $clr-primary-4;
+				margin-left: 1rem !important;
 			}
-			.btns {
-				.back-btn {
-					margin-right: 1rem;
-				}
+		}
+		.btns {
+			.back-btn {
+				margin-right: 1rem;
 			}
 		}
 	}
